--- a/default.css
+++ b/default.css
@@ -7,7 +7,6 @@ body {
 	position: relative;
 	height: 110vh;
 	width: 100%;
-	overflow-y: hidden;
 }
 
 #menuPanel, #historyList, #howToPanel, #optionsPanel, #messageBox {
@@ -140,4 +139,12 @@ input[type=button]:hover {
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
+}
+.headerText{
+	font-size: 2rem;
+	position: absolute;
+	left: 50%;
+	top: 5%;
+	transform: translate(-50%, -50%);
+	box-shadow: 5px solid grey;
 }
